--- a/iuca.tech.reserve/Web/Views/Home/Index.cshtml
+++ b/iuca.tech.reserve/Web/Views/Home/Index.cshtml
@@ -1,8 +1,44 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@using Domain.Constants;
+@using Microsoft.AspNetCore.Identity;
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+<div class="container">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        if (User.IsInRole(Roles.Administrator))
+        {
+            <div class="row pt-4">
+                <div class="col-12">
+                    <h2>Welcome Administrator!</h2>
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="row pt-4">
+                <div class="col-12">
+                    <h2>Welcome Client!</h2>
+                </div>
+            </div>
+        }
+    }
+    else
+    {
+        <div class="row pt-4 text-center">
+            <div class="col-12">
+                <h3>Пожалуйста, войдите в свой аккаунт</h3>
+            </div>
+            <div class="col-12 pt-4">
+                <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
+                    <div>
+                        <button type="submit" class="btn btn-primary shadow-none" name="provider" value="Google">
+                            Login with Google
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    }
 </div>
