--- a/iuca.tech.reserve/Web/Views/_ViewImports.cshtml
+++ b/iuca.tech.reserve/Web/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Web
-@using Web.Models
+@using Application.DTOs
+@using Domain.Enums;
+@using Domain.Constants;
+@using Domain.Exceptions;
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
