--- a/iuca.tech.reserve/Web/wwwroot/css/site.css
+++ b/iuca.tech.reserve/Web/wwwroot/css/site.css
@@ -1,22 +1,32 @@
-html {
-  font-size: 14px;
+﻿html {
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+
+/* Кастомные классы */
+
+.rounded-4 {
+    border-radius: .4rem !important;
+}
+
+.rounded-5 {
+    border-radius: .5rem !important;
 }
