--- a/iuca.tech.reserve/Web/Views/Equipment/_AddEquipmentModal.cshtml
+++ b/iuca.tech.reserve/Web/Views/Equipment/_AddEquipmentModal.cshtml
@@ -11,7 +11,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-primary shadow-none" onclick="addEquipment()">
+                <button type="submit" class="btn btn-primary shadow-none rounded-4" onclick="createEquipment()">
                     <i class="fa fa-floppy-o"></i>&nbsp; Save
                 </button>
             </div>
