--- a/iuca.tech.reserve/Web/Views/Equipment/_EditEquipmentModal.cshtml
+++ b/iuca.tech.reserve/Web/Views/Equipment/_EditEquipmentModal.cshtml
@@ -13,7 +13,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-primary shadow-none" onclick="editEquipment('@Model.Id')">
+                <button type="submit" class="btn btn-primary shadow-none rounded-4" onclick="editEquipment('@Model.Id')">
                     <i class="fa fa-floppy-o"></i>&nbsp; Save
                 </button>
             </div>
