--- a/iuca.tech.reserve/Web/Views/Equipment/_EquipmentForm.cshtml
+++ b/iuca.tech.reserve/Web/Views/Equipment/_EquipmentForm.cshtml
@@ -10,31 +10,32 @@
                 Equipment number
                 <span class="text-danger">*</span>
             </label>
-            <input type="number" class="form-control shadow-none" asp-for="@Model.EquipmentNumber">
+            <input type="number" class="form-control shadow-none rounded-4" asp-for="@Model.EquipmentNumber">
         </div>
         <div class="form-group my-2">
             <label for="SerialNumber">
                 Serial number
             </label>
-            <input type="text" class="form-control shadow-none" placeholder="Serial number" asp-for="@Model.SerialNumber">
+            <input type="text" class="form-control shadow-none rounded-4" placeholder="Serial number" asp-for="@Model.SerialNumber">
         </div>
         <div class="form-group my-2">
             <label for="Description">
                 Description
             </label>
-            <textarea class="form-control shadow-none" placeholder="Description" rows="3" asp-for="@Model.Description"></textarea>
+            <textarea class="form-control shadow-none rounded-4" placeholder="Description" rows="3" asp-for="@Model.Description"></textarea>
         </div>
         <div class="form-group my-2">
             <label for="ImageFile">
                 Image
             </label>
-            <input type="file" class="form-control shadow-none" accept="image/*" asp-for="@Model.ImageFile">
+            <input type="file" class="form-control shadow-none rounded-4" accept="image/*" asp-for="@Model.ImageFile">
         </div>
         <div class="form-group my-2">
             <label for="Type">
                 Type
+                <span class="text-danger">*</span>
             </label>
-            <select class="form-control shadow-none" asp-items="@ViewBag.EquipmentTypes" asp-for="@Model.Type">
+            <select class="form-control shadow-none rounded-4" asp-items="@ViewBag.EquipmentTypes" asp-for="@Model.Type">
             </select>
         </div>
 
