--- a/iuca.tech.reserve/Web/Views/_ViewImports.cshtml
+++ b/iuca.tech.reserve/Web/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using Domain.Enums;
 @using Domain.Constants;
 @using Domain.Exceptions;
+@using Domain.Extensions;
 @using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
