--- a/iuca.tech.reserve/Web/Views/Requests/Index.cshtml
+++ b/iuca.tech.reserve/Web/Views/Requests/Index.cshtml
@@ -27,21 +27,10 @@
             {
                 foreach (var request in Model)
                 {
-                    string statusColor = "text-secondary";
-
-                    if (request.Status == RequestStatus.Issued)
-                    {
-                        statusColor = "text-danger";
-                    }
-                    else if (request.Status == RequestStatus.Pending)
-                    {
-                        statusColor = "text-warning";
-                    }
-
-                    <div class="card">
+                    <div class="card my-3">
                         <div class="card-header">
                             <h5 class="card-title mb-1">
-                                <i class="fa fa-circle @statusColor"></i>
+                                <i class="fa fa-circle @request.Status.GetTextColorClass()"></i>
                                 @Enum.GetName(request.Status)
                             </h5>
                         </div>
@@ -50,6 +39,16 @@
                                 <div class="col-lg-6 col-12">
                                     <span>@request.Client.FullName</span>
                                     <span>@request.Client.PhoneNumber</span>
+                                    <br />
+                                    @if (request.IssuedDate != DateTime.MinValue)
+                                    {
+                                        <span>@request.IssuedDate</span>
+                                    }
+                                    <br />
+                                    @if (request.ReturnedDate != DateTime.MinValue)
+                                    {
+                                        <span>@request.ReturnedDate</span>
+                                    }
                                 </div>
                                 <div class="col-lg-6 col-12">
                                     @if (request.RequestEquipments != null && request.RequestEquipments.Any())
@@ -63,6 +62,17 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card-footer">
+                            @if (request.Status == RequestStatus.Pending)
+                            {
+                                <a href="#" class="card-link" onclick="rejectRequest('@request.Id')">Reject</a>
+                                <a href="#" class="card-link" onclick="approveRequest('@request.Id')">Approve</a>
+                            }
+                            else if (request.Status == RequestStatus.Issued)
+                            {
+                                <a href="#" class="card-link" onclick="returnRequest('@request.Id')">Return</a>
+                            }
+                        </div>
                     </div>
                 }
             }
@@ -70,3 +80,11 @@
     </div>
 
 </div>
+
+@section Scripts {
+
+    <script src="~/js/requests/reject-request.js" asp-append-version="true"></script>
+    <script src="~/js/requests/approve-request.js" asp-append-version="true"></script>
+    <script src="~/js/requests/return-request.js" asp-append-version="true"></script>
+
+}
